--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background-color: #181A1B;
 }
 
-.buttons {
+.topbar {
     position: fixed;
     width: 100%;
     background-color: #141414;
