--- a/style.css
+++ b/style.css
@@ -132,50 +132,75 @@ body {
     margin: 5px;
     width: calc(100% - 5px);
     height: 50px;
-    border-radius: 2% / 6%;
+    border-radius: 2% / 40%;
     background-color: #131313;
 }
 
 .maximizedCommandMenu {
     position: relative;
-    display: flex;
     justify-content: center;
     top: 5px;
     margin: 5px;
     width: calc(100% - 5px);
-    height: 150px;
-    border-radius: 2% / 6%;
+    height: 170px;
+    border-radius: 3% / 20%;
     background-color: #131313;
 }
 
-.minimizedCommandMenuResponseText {
+.minimizedCommandResponse {
     font-size: 20px;
     font-family: "Monsterrat", sans-serif;
     font-weight: 500;
     color: #989898;
 }
 
-.minimizedCommandMenuCommandText {
+.minimizedCommandCommand {
     font-size: 20px;
     font-family: "Monsterrat", sans-serif;
     font-weight: 600;
     color: #999999;
 }
 
-.maximizedCommandMenuText {
-    font-size: 16px;
-    margin: 4px;
+.maximizedCommandResponse {
+    text-align: center;
+    position: relative;
+    top: 10px;
+    font-size: 20px;
     font-family: "Monsterrat", sans-serif;
     font-weight: 500;
-    color: #999999;
+    color: #dedede;
 }
 
-.maximizedCommandMenuAttText {
-    font-size: 16px;
-    margin: 4px;
+.maximizedCommandCommand {
+    text-align: center;
+    font-size: 20px;
     font-family: "Monsterrat", sans-serif;
     font-weight: 600;
-    color: #999999;
+    color: #dedede;
+}
+
+.minimizedCommandKey {
+    font-size: 0px;
+}
+
+.maximizedCommandKey {
+    text-align: center;
+    font-size: 17px;
+    font-family: "Monsterrat", sans-serif;
+    font-weight: 600;
+    color: #aaaaaa;
+}
+
+.minimizedCommandValue {
+    font-size: 0px;
+}
+
+.maximizedCommandValue {
+    text-align: center;
+    font-size: 17px;
+    font-family: "Monsterrat", sans-serif;
+    font-weight: 500;
+    color: #aaaaaa;
 }
 
 .anglearrowdown {
