--- a/style.css
+++ b/style.css
@@ -222,6 +222,9 @@ body {
 }
 
 .uuh {
+    position: absolute;
+    top: 100px;
+    right: 100px;
     width: 1000px;
 }
 
@@ -229,4 +232,6 @@ body {
     position: fixed;
     top: 200px;
     right: 500px;
+    width: 5000px;
+    height: 5000px;
 }
