--- a/style.css
+++ b/style.css
@@ -166,10 +166,11 @@ body {
     font-family: "Monsterrat", sans-serif;
     align-items: center;
     margin: 5px;
+    margin-bottom: 10px;
     width: 100%;
     height: 50px;
     background-color: #222222;
-    border-radius: 10px;
+    border-radius: 9px;
 }
 
 .cmdShort:hover {
@@ -230,12 +231,15 @@ body {
 .arrow {
     position: absolute;
     width: 30px;
-    left: calc(100% - 40px)
+    left: calc(100% - 40px);
+    transform: rotate(90deg);
 }
 
 .cmdSeperator {
+    margin: 4px;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 hr {
@@ -251,6 +255,27 @@ hr {
     font-size: 30px;
     color: #bebebe;
     margin: 5px;
+}
+
+.cmdLButton {
+    display: flex;
+    width: 80px;
+    height: 45px;
+    background-color: #191919;
+    border: 3px solid #404040;
+    border-radius: 10px;
+    position: absolute;
+    font-family: "Monsterrat", sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    color: #bebebe;
+    align-items: center;
+    justify-content: center;
+}
+
+.cmdLButton:hover {
+    cursor: pointer;
+    background-color: #212121;
 }
 
 .uuh {
