--- a/style.css
+++ b/style.css
@@ -101,7 +101,9 @@ body {
 .sbContainer {
     position: fixed;
     display: flex;
-    flex-wrap: wrap;
+
+    flex-flow: column;
+    align-items: center;
     left: 10px;
     bottom: 10px;
     height: calc(100% - 91px);
@@ -111,20 +113,33 @@ body {
     overflow-y: auto;
 }
 
+.sbButtons {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-bottom: 10px;
+}
+
+.sbLvlContainer {
+    width: 100%;
+    margin-right: 5px;
+}
+
 .sbCmdButton {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 50px;
-    width: calc(100% - 5px);
+    width: calc(100% - 10px);
     margin: 5px;
+    margin-bottom: 10px;
     border-radius: 10px;
     background-color: #202020;
     font-family: "Monsterrat", sans-serif;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 700;
-    color: #afafaf;
+    color: #a1a1a1;
 }
 
 .sbCmdButton:hover {
@@ -204,7 +219,8 @@ body {
     position: relative;
     bottom: 10px;
     left: 15px;
-    width: calc(100% - 6px);
+    width: calc(100% - 17px);
+    padding: 5px;
     height: auto;
     background-color: #202020;
     border-radius: 0px 0px 10px 10px;
@@ -228,6 +244,42 @@ body {
     line-height: 20%;
 }
 
+.subCmds {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    width: calc(100% - 20px);
+    padding: 5px;
+    height: auto;
+    margin-top: 10px;
+    margin-left: 5px;
+    background-color: rgba(19, 19, 19, 0.5);
+    border-radius: 15px;
+    line-height: 10%;
+    font-size: 15px;
+    color: #9f9f9f;
+}
+
+.subCmdsResponse {
+    position: relative;
+    bottom: 10px;
+    color: #6f6f6f;
+}
+
+.subCmdsText {
+    display: flex;
+}
+
+.subCmdsText > h3 {
+    color: #808080;
+    font-size: 18px;
+}
+
+.subCmdsText > p {
+    color: #787878;
+    font-size: 18px;
+}
+
 .arrow {
     position: absolute;
     width: 30px;
@@ -242,7 +294,7 @@ body {
     justify-content: center;
 }
 
-hr {
+.cmdSeperator > hr {
     width: calc(100% - 60px);
     height: 5px;
     border-radius: 5px;
@@ -255,6 +307,33 @@ hr {
     font-size: 30px;
     color: #bebebe;
     margin: 5px;
+}
+
+.sbCmdSeperator {
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sbCmdSeperator > h1 {
+    font-family: "Monsterrat", sans-serif;
+    font-size: 30px;
+    color: #bebebe;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.sbCmdSeperator > hr {
+    width: 70%;
+    height: 5px;
+    border-radius: 5px;
+    border: 3px solid #404040;
+    color: #252525
 }
 
 .cmdLButton {
@@ -274,6 +353,27 @@ hr {
 }
 
 .cmdLButton:hover {
+    cursor: pointer;
+    background-color: #212121;
+}
+
+.sbCmdLButton {
+    display: flex;
+    width: 80px;
+    height: 45px;
+    background-color: #191919;
+    border: 3px solid #404040;
+    border-radius: 10px;
+    position: absolute;
+    font-family: "Monsterrat", sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    color: #bebebe;
+    align-items: center;
+    justify-content: center;
+}
+
+.sbCmdLButton:hover {
     cursor: pointer;
     background-color: #212121;
 }
