add login, update commands

--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
-    background-color: #181A1B;
+    background-color: #242729;
 }
 
 .tb {
+    z-index: 100;
     position: fixed;
     display: flex;
     flex-flow: row;
@@ -12,8 +13,10 @@ body {
     background-color: #141414;
     top: -5px;
     left: 0px;
-    height: 75px;
+    min-height: 65px;
+    height: auto;
     border-radius: 0px 0px 15px 15px;
+    padding: 5px;
 }
 
 .tbButton {
@@ -21,7 +24,8 @@ body {
     align-items: center;
     justify-content: center;
     width: auto;
-    height: 50px;
+    min-height: 50px;
+    height: auto;
     margin-top: 5px;
     margin-left: 10px;
     padding-left: 10px;
@@ -31,11 +35,14 @@ body {
     font-family: "Roboto", sans-serif;
     font-size: 20px;
     font-weight: 1000;
+    line-height: 0;
     color: darkgrey;
+    transition-duration: 0.2s;
 }
 
 .tbButton:hover {
-    background-color: #111111;
+    background-color: #090909;
+    color: #999999;
     cursor: pointer;
 }
 
@@ -44,24 +51,27 @@ body {
     display: flex;
     flex-flow: column;
     width: auto;
-    height: 50px;
+    min-height: 50px;
+    height: auto;
     padding-left: 7px;
     padding-right: 7px;
     background-color: #6238b1;
     border-radius: 10px;
     top: 12px;
-    right: 5px;
+    right: 20px;
     align-items: center;
     justify-content: center;
     font-family: "Roboto", sans-serif;
     color: ghostwhite;
     font-weight: 1000;
     font-size: 20px;
-    line-height: 0%;
+    line-height: 0;
+    transition-duration: 0.2s;
 }
 
 .authButton:hover {
-    background-color: #6441a5;
+    background-color: #5b34a5;
+    color: #e6e6e6;
     cursor: pointer;
 }
 
@@ -107,7 +117,7 @@ body {
     left: 10px;
     bottom: 10px;
     height: calc(100% - 91px);
-    width: 200px;
+    width: 220px;
     border-radius: 10px;
     background-color: #191919;
     overflow-y: auto;
@@ -140,6 +150,7 @@ body {
     font-size: 25px;
     font-weight: 700;
     color: #a1a1a1;
+    transition-duration: 0.2s;
 }
 
 .sbCmdButton:hover {
@@ -154,7 +165,7 @@ body {
     flex-flow: column;
     justify-content: flex-start;
     height: calc(100% - 91px);
-    width: calc(100% - 230px);
+    width: calc(100% - 250px);
     bottom: 10px;
     right: 8px;
     border-radius: 5px 10px;
@@ -186,6 +197,7 @@ body {
     height: 50px;
     background-color: #222222;
     border-radius: 9px;
+    transition-duration: 0.2s;
 }
 
 .cmdShort:hover {
@@ -217,11 +229,13 @@ body {
 
 .cmdLong {
     position: relative;
+    display: column;
     bottom: 10px;
     left: 15px;
     width: calc(100% - 17px);
     padding: 5px;
     height: auto;
+    padding-bottom: 5px;
     background-color: #202020;
     border-radius: 0px 0px 10px 10px;
     font-family: "Monsterrat", sans-serif;
@@ -230,18 +244,20 @@ body {
 .cmdLongText {
     display: flex;
     justify-content: center;
+    margin-top: -15px;
+    margin-bottom: -18px;
 }
 
 .cmdLongText > h3 {
     font-size: 20px;
     color: #808080;
-    line-height: 20%;
+    line-height: 110%;
 }
 
 .cmdLongText > p {
     font-size: 20px;
     color: #787878;
-    line-height: 20%;
+    line-height: 110%;
 }
 
 .subCmdsContainer {
@@ -374,6 +390,7 @@ body {
     color: #bebebe;
     align-items: center;
     justify-content: center;
+    transition-duration: 0.2s;
 }
 
 .cmdLButton:hover {
@@ -395,6 +412,7 @@ body {
     color: #bebebe;
     align-items: center;
     justify-content: center;
+    transition-duration: 0.2s;
 }
 
 .sbCmdLButton:hover {
