--- a/style.css
+++ b/style.css
@@ -1,5 +1,75 @@
+:root, .lightTheme {
+    color-scheme: light;
+
+    --primary-topbar-color: #e6e1e8;
+    --secondary-topbar-color: #ccccd0;
+
+    --base-hover-background-color: #babac4;
+    --base-hover-text-color: #2e2e2e;
+    --base-hover-shadow-color: #aeaeae;
+    --base-text-color: #323232;
+    --base-select-text-color: #100f0f;
+    
+
+    --primary-background-color: #fffdf8;
+    --secondary-background-color: #ededed;
+    --secondary-hover-background-color: #cacbcc;
+    --secondary-hover-shadow-color: #d8d9d9;
+
+    --primary-outline-color: #d6d1de;
+
+    --search-background-color: #f9feff;
+    --search-border-color: #cfd2d7;
+    --search-text-color: #a39c99;
+
+    --primary-cmd-background-color: #dddbdf;
+    --secondary-cmd-background-color: #dad8db;
+    --cmd-shade-color: #cecccd;
+    --cmd-hover-background-color: #d8d3da;
+    --cmd-secondary-hover-background-color: #e5e6ea; 
+    --cmd-primary-text-color: #4f4c4c;
+    --cmd-secondary-text-color: #5b5353;
+
+    --primary-icon-invert: 0.1;
+    --secondary-icon-invert: 0.5;
+}
+.darkTheme {
+    color-scheme: dark;
+
+    --primary-topbar-color: #111114;
+    --secondary-topbar-color: #1e1d1dcf;
+
+    --base-hover-background-color: #2c2c2f;
+    --base-hover-text-color: #ccc9c9;
+    --base-hover-shadow-color: #3d3d41;
+    --base-text-color: #b0afaf;
+    --base-select-text-color: #d1d1d1;
+
+    --primary-background-color: #282827;
+    --secondary-background-color: #191819;
+    --secondary-hover-background-color: #262627;
+    --secondary-hover-shadow-color: #050506;
+
+    --primary-outline-color: #302e33;
+
+    --search-background-color: rgb(53, 50, 51);
+    --search-border-color: #56585b;
+    --search-text-color: #a39c99;
+
+    --primary-cmd-background-color: #202020;
+    --secondary-cmd-background-color: #202020;
+    --cmd-shade-color: #131313;
+    --cmd-hover-background-color: #232323;
+    --cmd-secondary-hover-background-color: #202020; 
+    --cmd-primary-text-color: #808080;
+    --cmd-secondary-text-color: #787878;
+
+    --primary-icon-invert: 0.8;
+    --secondary-icon-invert: 0.5;
+}
+
 body {
-    background-color: #242729;
+    background-color: var(--primary-background-color);
 }
 
 .tb {
@@ -10,7 +80,7 @@ body {
     flex-wrap: nowrap;
     align-items: center;
     width: 100%;
-    background-color: #141414;
+    background-color: var(--primary-topbar-color);
     top: -5px;
     left: 0px;
     min-height: 65px;
@@ -31,34 +101,80 @@ body {
     padding-left: 10px;
     padding-right: 10px;
     border-radius: 10px;
-    background-color: #0e0e0e;
+    background-color: var(--secondary-topbar-color);
     font-family: "Roboto", sans-serif;
     font-size: 20px;
     font-weight: 1000;
     line-height: 0;
-    color: darkgrey;
+    color: var(--base-text-color);
     transition-duration: 0.2s;
+    user-select: none;
 }
 
 .tbButton:hover {
-    background-color: #090909;
-    color: #999999;
+    background-color: var(--base-hover-background-color);
+    color: var(--base-hover-text-color);
     cursor: pointer;
+    box-shadow: var(--base-hover-shadow-color) 0 0 2px 1px;
+}
+
+
+.left {
+    position: absolute;
+    right: 10px;
+    top: 2px;
+    display: flex;
+    align-items: center;
+    width: auto;
+    margin: 5px;
+}
+
+.themeSelect {
+    width: 30px;
+    height: 65px;
+    margin-right: 10px;
+}
+
+.light, .dark {
+    margin: 4.5px auto 0;
+    height: 23px;
+    width: 23px;
+    border-radius: 50%;
+    border: #4c4f55 2px solid;
+    filter: opacity(0.83);
+    transition-duration: 0.4s;
+}
+
+.light:hover, .dark:hover {
+    cursor: pointer;
+    filter: opacity(1);
+}
+
+.light {
+    background-color: #e6e6e6;
+}
+.dark {
+    background-color: #101010;
+}
+
+.darkTheme .dark {
+    box-shadow: 0 0 6px #7f8383; 
+}
+.lightTheme .light {
+    box-shadow: 0 0 6px #313130; 
+
 }
 
 .authButton {
-    position: absolute;
     display: flex;
     flex-flow: column;
     width: auto;
     min-height: 50px;
-    height: auto;
+    height: 2.25em;
     padding-left: 7px;
     padding-right: 7px;
     background-color: #6238b1;
     border-radius: 10px;
-    top: 12px;
-    right: 20px;
     align-items: center;
     justify-content: center;
     font-family: "Roboto", sans-serif;
@@ -81,7 +197,7 @@ body {
 }
 
 .userButton {
-    position: fixed;
+    /*position: fixed;*/
     display: flex;
     justify-content: center;
     height: 50px;
@@ -96,6 +212,7 @@ body {
     border-radius: 50%;
     width: 46px;
     height: 46px;
+    outline: 2px var(--primary-outline-color) solid;
 }
 
 .commands {
@@ -105,7 +222,7 @@ body {
     left: 5px;
     height: calc(100% - 80px);
     border-radius: 15px;
-    background-color: #131313;
+    background-color: #00000006;
 }
 
 .sbContainer {
@@ -118,10 +235,37 @@ body {
     bottom: 10px;
     height: calc(100% - 91px);
     width: 220px;
+    padding: 2px;
     border-radius: 10px;
-    background-color: #191919;
+    background-color: var(--secondary-background-color);
     overflow-y: auto;
     transition: 0.15s ease-out;
+    outline: var(--primary-outline-color) 3px solid;
+}
+
+.searchBar {
+    width: 100%;
+    position: sticky;
+    z-index: 5;
+    top: 0;
+}
+
+#searchBar {
+    width: 90%;
+    background-color: var(--search-background-color);
+    padding: 0 0 3px 3px;
+    margin: 9px 0 0 3%;
+    border-radius: 10px;    
+    font-family: "Winky sans", sans-serif;
+    font-size: 1.6em;
+    color: var(--search-text-color);
+    border: var(--search-border-color) 3px solid;
+    transition-duration: 0.2s;
+}
+
+#searchBar:focus {
+    outline: none;
+    box-shadow: var(--base-hover-shadow-color) 0 0 7px; 
 }
 
 .sbButtons {
@@ -146,17 +290,17 @@ body {
     margin: 5px;
     margin-bottom: 10px;
     border-radius: 10px;
-    background-color: #202020;
+    background-color: var(--primary-cmd-background-color);
     font-family: "Monsterrat", sans-serif;
     font-size: 25px;
     font-weight: 700;
-    color: #a1a1a1;
+    color: var(--base-text-color);
     transition-duration: 0.2s;
 }
 
 .sbCmdButton:hover {
-    background-color: #232323;
-    color: #d9d9d9;
+    background-color: var(--cmd-hover-background-color);
+    color: var(--base-hover-text-color);
     cursor: pointer;
 }
 
@@ -167,12 +311,14 @@ body {
     justify-content: flex-start;
     height: calc(100% - 91px);
     width: calc(100% - 250px);
+    padding: 2px;
     bottom: 10px;
     right: 8px;
-    border-radius: 5px 10px;
-    background-color: #191919;
+    border-radius: 10px;
+    background-color: var(--secondary-background-color);
     overflow-y: auto;
     transition: 0.15s ease-out;
+    outline: var(--primary-outline-color) 3px solid;
 }
 
 .cmdMenus {
@@ -191,25 +337,27 @@ body {
     z-index: 4;
     display: flex;
     justify-content: center;
-    font-family: "Monsterrat", sans-serif;
     align-items: center;
+    font-family: "Monsterrat", sans-serif;
+    text-align: center;
     margin: 5px;
     margin-bottom: 10px;
     width: 100%;
     height: 50px;
-    background-color: #222222;
+    background-color: var(--primary-cmd-background-color);
     border-radius: 9px;
     transition-duration: 0.2s;
 }
 
 .cmdShort:hover {
     cursor: pointer;
-    background-color: #232323;
+    background-color: var(--cmd-hover-background-color);
 }
 
 .cmdShort > h1 {
     font-size: 29px;
-    color: #a1a1a1;
+    color: var(--base-text-color);
+    margin-left: 5px;
 }
 
 .cmdShort > p {
@@ -218,15 +366,15 @@ body {
 }
 
 .max {
-    box-shadow: 4px 4px 0px #131313;
+    box-shadow: 4px 4px 0px var(--cmd-shade-color);
 }
 
 .max > p {
-    color: #a9a9a9;
+    color: var(--base-select-text-color)
 }
 
 .max > h1 {
-    color: #d1d1d1;
+    color: var(--base-select-text-color);
 }
 
 .cmdLong {
@@ -238,9 +386,16 @@ body {
     padding: 5px;
     height: auto;
     padding-bottom: 5px;
-    background-color: #202020;
+    background-color: var(--secondary-cmd-background-color);
     border-radius: 0px 0px 10px 10px;
     font-family: "Monsterrat", sans-serif;
+}
+
+.categoryIcon {
+    height: 25px;
+    position: absolute;
+    margin: 5px 0 0 10px;
+    filter: invert(var(--secondary-icon-invert))
 }
 
 .cmdLongText {
@@ -252,14 +407,14 @@ body {
 
 .cmdLongText > h3 {
     font-size: 20px;
-    color: #808080;
+    color: var(--cmd-primary-text-color);
     line-height: 110%;
     margin-right: 5px;
 }
 
 .cmdLongText > p {
     font-size: 20px;
-    color: #787878;
+    color: var(--cmd-secondary-text-color);
     line-height: 110%;
 }
 
@@ -314,13 +469,13 @@ body {
 }
 
 .subCmdsText > h3 {
-    color: #808080;
+    color: var(--cmd-primary-text-color);
     font-size: 18px;
     margin-right: 5px;
 }
 
 .subCmdsText > p {
-    color: #787878;
+    color: var(--cmd-secondary-text-color);
     font-size: 18px;
 }
 
@@ -342,7 +497,7 @@ body {
     width: calc(100% - 60px);
     height: 5px;
     border-radius: 5px;
-    border: 3px solid #404040;
+    border: 3px solid var(--secondary-hover-background-color);
     color: #252525
 }
 
@@ -376,52 +531,31 @@ body {
     width: 70%;
     height: 5px;
     border-radius: 5px;
-    border: 3px solid #404040;
+    border: 3px solid var(--secondary-hover-background-color);
     color: #252525
 }
 
-.cmdLButton {
+.cmdLButton, .sbCmdLButton {
     display: flex;
     width: 80px;
     height: 45px;
-    background-color: #191919;
-    border: 3px solid #404040;
+    background-color: var(--secondary-background-color);
+    border: 3px solid var(--secondary-hover-background-color);
     border-radius: 10px;
     position: absolute;
     font-family: "Monsterrat", sans-serif;
     font-size: 24px;
     font-weight: 600;
-    color: #bebebe;
+    color: var(--base-text-color);
     align-items: center;
     justify-content: center;
     transition-duration: 0.2s;
+    user-select: none;
 }
 
-.cmdLButton:hover {
+.cmdLButton:hover, .sbCmdLButton:hover {
     cursor: pointer;
-    background-color: #212121;
-}
-
-.sbCmdLButton {
-    display: flex;
-    width: 80px;
-    height: 45px;
-    background-color: #191919;
-    border: 3px solid #404040;
-    border-radius: 10px;
-    position: absolute;
-    font-family: "Monsterrat", sans-serif;
-    font-size: 24px;
-    font-weight: 600;
-    color: #bebebe;
-    align-items: center;
-    justify-content: center;
-    transition-duration: 0.2s;
-}
-
-.sbCmdLButton:hover {
-    cursor: pointer;
-    background-color: #212121;
+    background-color: var(--cmd-secondary-hover-background-color);
 }
 
 .helpButton {
@@ -431,8 +565,8 @@ body {
     right: 10px;
     bottom: 10px;
     border-radius: 50%;
-    box-shadow: inset 0 0 2px 2px #474b4e;
-    background-color: #313336;
+    box-shadow: inset 0 0 2px 2px var(--search-border-color);
+    background-color: var(--primary-background-color);
     text-align: center;
     transition-duration: 0.13s;
 }
@@ -449,8 +583,8 @@ body {
 
 .helpButton:hover {
     cursor: pointer;
-    box-shadow: inset 0 0 2px 2px #474b4e, #141414 0 0 5px, #141414 0 0 5px, #141414 0 0 5px, #141414 0 0 5px;
-    text-shadow: #727272 0 0 3px;
+    box-shadow: inset 0 0 2px 2px var(--search-border-color), var(--secondary-hover-shadow-color) 0 0 5px, var(--secondary-hover-shadow-color) 0 0 5px;
+    text-shadow: var(--base-hover-shadow-color) 0 0 3px;
 }
 
 .helpPopup {
@@ -459,7 +593,7 @@ body {
     width: 100%;
     height: 100%;
     left: 0;
-    top: 0;
+    top: 5em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -475,17 +609,18 @@ body {
 .helpPopupContainer {
     font-size: 1.17em;
     position: relative;
+    bottom: 30px;
     z-index: 5;
     opacity: 1;
     padding: 5px;
     border-radius: 6px;
-    background-color: #34363c;
-    border: #302925 2px solid;
+    background-color: var(--primary-background-color);
+    border: var(--primary-outline-color) 4px dotted;
     font-family: "Roboto", "sans-serif";
     max-width: 50%;
     max-height: 68%;
     overflow-y: scroll;
-    color: #c8bcbc;
+    color: var(--base-text-color);
 }
 
 .helpPopupClose {
@@ -493,9 +628,9 @@ body {
     border-radius: 50%;
     padding-left: 5px;
     padding-right: 5px;
-    position: relative;
-    left: calc(100% - 1.2em);
-    bottom: 0.3em;
+    position: absolute;
+    right: 0.4em;
+    top: 0.2em;
     user-select: none;
     -webkit-user-select: none;
     text-align: center;
@@ -504,14 +639,13 @@ body {
 }
 .helpPopupClose:hover {
     cursor: pointer;
-    text-shadow: #c7c7c7 0 0 9px, #c7c7c7 0 0 9px, #c7c7c7 0 0 9px, #c7c7c7 0 0 9px, #c7c7c7 0 0 9px;
+    text-shadow: var(--base-select-text-color) 0 0 2px, var(--base-select-text-color) 0 0 7px;
 }
 
 .levelHelp {
     position: relative;
-    bottom: 10px;
 }
-.levelHelp > h3 {
+.levelHelp > h3, .helpPopupContainer > h3 {
     line-height: 0;
 }
 .levelHelp > p {
@@ -525,17 +659,24 @@ body {
     padding: 0;
 }
 
-.uuh {
-    position: absolute;
-    top: 100px;
-    right: 100px;
-    width: 1000px;
+.infoIcons > p {
+    line-height: 0;
 }
 
-.guh {
+.infoIcon {
+    width: 30px;
+    filter: invert(var(--primary-icon-invert));
+    margin: -0.2em 0.3em -0.2em 0;
+}
+
+.infoIcon > p > img {
+    position: relative;
+    top: 7px;
+}
+
+.uuh {
     position: fixed;
-    top: 200px;
-    right: 500px;
-    width: 5000px;
-    height: 5000px;
+    bottom: 0;
+    right: 0;
+    height: 25%;
 }
