fix theme on home, darker search, update commands

--- a/style.css
+++ b/style.css
@@ -52,9 +52,9 @@
 
     --primary-outline-color: #302e33;
 
-    --search-background-color: rgb(53, 50, 51);
-    --search-border-color: #56585b;
-    --search-text-color: #a39c99;
+    --search-background-color: rgb(40, 37, 38);
+    --search-border-color: #37393b;
+    --search-text-color: #aba4a1;
 
     --primary-cmd-background-color: #202020;
     --secondary-cmd-background-color: #202020;
