--- a/css/navbar.css
+++ b/css/navbar.css
@@ -2,7 +2,6 @@
     display: block;
     position: fixed;
     width: 100%;
-    max-height: 25%;
     background-color: #2E2538;
     border-radius: 0 0 0.5rem 0.5rem;
     filter: drop-shadow(0 4px 2px rgba(0, 0, 0, 0.25));
@@ -96,4 +95,11 @@
 #navbar-button-login > .navbar-button-anchor {
     padding-left: 0.6rem;
     padding-right: 0.6rem;
+}
+
+
+@media only screen and (max-width: 400px) {
+    #navbar-button-login {
+        display: none;
+    }
 }
