--- a/css/commands.css
+++ b/css/commands.css
@@ -74,20 +74,21 @@
 
 .command-commands-container {
     height: 100%;
-    width: 9.9rem;
+    width: 10.7rem;
     border-radius: 0.3rem;
     background-color: #3A2F45;
-    padding-left: 0.7rem;
+    overflow-y: scroll;
 }
 
-.command-commands-margin {
-    position: relative;
+.command-commands-buttons-container {
+    padding-left: 0.7rem;
+    padding-right : 0.7rem;
 }
+
 
 .command-command-btn {
     display: flex;
     height: 2.5rem;
-    margin-right: 0.7rem;
     margin-bottom: 0.7rem;
     background-color: #4C3F59;
     align-items: center;
@@ -106,12 +107,17 @@
 }
 
 .command-command-btn:hover {
-    background-color: #554762;
+    background-color: #574865;
     cursor: pointer;
 }
 
 .command-command-btn > span {
     margin-left: 0.5rem;
+}
+
+.command-active {
+    filter: drop-shadow(0 0 0.25rem rgba(255, 255, 255, 0.1));
+    background-color: #554762;
 }
 
 
